Consolidate Source File Parsing